# manage

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
manage/: Cargo.toml  README.md
manage/src/: data_manager.rs  exists_managed.rs  handle.rs  has_name.rs  lib.rs  managed.rs  misc.rs
test/: Cargo.toml
test/src/: lib.rs
