[package]
name = "manage"
version = "0.4.11"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Manage assets and other resources"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/refs"
repository = "https://github.com/VladasZ/refs"

[lib]
name = "manage"
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
refs = { workspace = true }

[dev-dependencies]
serial_test = "3.0.0"
