[package]
name = "test"
version = "0.1.0"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]


[lib]
name = "manage_test"
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
refs = { workspace = true }
manage = { path = "../manage" }

[dev-dependencies]
serial_test = "3.0.0"
